--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,22 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "ignore": ["**/*.html"]
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets/"
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -81,7 +90,13 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "ignore": ["**/*.html"]
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets/"
               }
             ],
             "styles": [
